# lauzhack-2025

./: .gitignore  .gitmodules  README.md  assistant_plan.py  assistant_plan_validator.py  camera_prompt.py  duckduckgo_search.py  main.py  mx_server.py  pyproject.toml  test-structured.py  test_duckduckgo_search.py  tool_executor.py
audio/: notifications.py  recorder.py  speech-to-text.py  speech_to_text.py  text-to-speech.py  text_to_speech.py
camera/: helpers.py  preview.py  prompt.py
jarvis-mx/: esbuild.config.js  index.js  package-lock.json  package.json
jarvis-mx/package/metadata/: LoupedeckPackage.yaml
jarvis-mx/src/: test-actions.js
sam_local/: sam.py  sam_agent_mode.py  test_chagpt_loc.py
ui/: .gitignore  ARCHITECTURE.md  FEATURES.md  GETTING_STARTED.md  PROJECT_SUMMARY.md  README.md  SETUP.md  electron-builder.json  next.config.js  package-lock.json  package.json  project-description.md  tailwind.config.js  test-server.py
ui/electron/: main.js  preload.js
ui/scripts/: dev.sh  setup.sh
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/api/frame/: route.ts
ui/src/components/: CameraView.tsx  ControlBar.tsx  StatusDock.tsx  WebPanel.tsx
ui/src/hooks/: useMXBridge.ts
ui/src/types/: electron.d.ts
yolo_pc_part/: yolo_inference.py  yolo_training.py
