[project]
name = "lauzhack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.2",
    "elevenlabs>=2.24.0",
    "numpy>=2.2.6",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "dotenv>=0.9.9",
    "openai>=2.8.1",
    "opencv-python>=4.12.0.88",
]
