[project]
name = "lauzhack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.6",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "audioop-lts>=0.2.2",
    "numpy>=2.2.6",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "openai>=2.8.1",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "sam3",
    "einops>=0.8.1",
    "triton-windows<3.6",
    "decord>=0.6.0",
    "pycocotools>=2.0.10",
    "psutil>=7.1.3",
    "huggingface-hub[cli]>=1.1.5",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "requests>=2.32.5",
    "ultralytics>=8.3.230",
    "pynput>=1.7.7",
    "sounddevice>=0.5.0",
    "soundfile>=0.13.0",
    "fastapi>=0.121.3",
    "uvicorn>=0.38.0",
    "pyzmq>=26.2.0",
]

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu130"
explicit = true


[tool.uv.sources]
torchvision = [
  { index = "pytorch-gpu"},
]
torch = [
  { index = "pytorch-gpu"},
]
sam3 = { workspace = true, editable = true }

[tool.uv.workspace]
members = [
    "sam3",
]

[tool.uv]
override-dependencies = ["numpy>=2.2.6"]


